--- a/tiendung.Identity/tiendung.Identity.csproj
+++ b/tiendung.Identity/tiendung.Identity.csproj
@@ -1,10 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>84872934-dd87-4d6e-a704-850e3c405624</UserSecretsId>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>ef1957b4-02c6-4774-bbd8-a0762e5d9da2</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
